config/constitution/siraj-unified-production-constitution/1.0.0/SIRAJ_UNIFIED_PRODUCTION_CONSTITUTION_V1.md
# دستور سراج الموحد للإنتاج — الإصدار 1.0.0

## حالة الوثيقة

```text
CONSTITUTION_ID = SIRAJ_UNIFIED_PRODUCTION_CONSTITUTION
VERSION = 1.1.0
PREVIOUS_VERSION = 1.0.0
AMENDMENT = SHORT_DERIVATIVE_NARRATION_CAPTIONS_SCOPE
CONSOLIDATION_DATE = 2026-08-13
AUTHORITY = SYSTEM_ROOT
SCOPE = SERIES_WIDE
OVERRIDABLE_BY_EPISODE = FALSE
FAIL_CLOSED = TRUE
CONSOLIDATION_STATUS = COMPLETE
IMPLEMENTATION_STATUS = NOT_STARTED
PRODUCTION_AUTHORIZATION = FALSE
```

هذه الوثيقة تجمع القرارات البشرية المعتمدة في الأقسام 1–10 في عقد واحد. وهي لا تمنح إذنًا بالتوليد أو الإنفاق أو إعادة الإرسال أو المونتاج أو النشر. عند التعارض، يفوز الحكم الأشد حمايةً للعقيدة، والحقيقة، والستر، والخصوصية البصرية، والمال، والموافقة البشرية.

## مصطلحات الإلزام

- **يجب / REQUIRED:** شرط لازم للمرور.
- **ممنوع / FORBIDDEN:** مخالفة مانعة لا تُعوَّض بجودة مرتفعة في جانب آخر.
- **مسموح / ALLOWED:** جواز مقيد بجميع القواعد الأعلى.
- **ديناميكي / DYNAMIC:** يختاره النظام داخل حدود صريحة، مع أثر تدقيقي وموافقة حيث يلزم.
- **مجهول / UNKNOWN:** حالة مستقلة لا تعني الفشل ولا الإذن بالتخمين أو إعادة المحاولة.
- **تغيير جوهري / MATERIAL_CHANGE:** تغيير قد يمس المعنى أو الهوية أو التوقيت أو التكلفة أو المزود أو السياسة أو الموافقة.

## ترتيب السلطة

```text
UNIFIED_CONSTITUTION
> APPROVED_SERIES_PROFILES
> APPROVED_EPISODE_EVIDENCE_AND_CONTRACTS
> APPROVED_SCRIPT_AND_NARRATION
> APPROVED_STORYBOARD
> APPROVED_PROVIDER_PAYLOADS
> EXECUTORS_AND_ADAPTERS
> RENDERS_AND_MONTAGE
> REPORTS_AND_CACHES
```

لا يجوز لطبقة أدنى تخفيف الدستور، ولا تُعد استجابة مزود أو تقريرًا أو اختبارًا منفردًا سلطةً تشريعية.

---

# القسم 1 — الضوابط الدينية وتمثيل الشخصيات والأصالة

## 1.1 حظر الوجوه البشري

```text
ALL_HUMAN_FACES_VISIBLE = FALSE
```

1. يحظر ظهور وجه أي إنسان في أي وسيط أو إطار، بما في ذلك الأنبياء وغير الأنبياء، الرجال والنساء والأطفال، الشخصيات الرئيسة والخلفية والحشود.
2. يشمل الحظر الوجه الكامل وأي جزء مميز منه: عين أو فم أو أنف أو ملامح جانبية أو تفاصيل قابلة للقراءة، ولو من بعيد أو لجزء من ثانية.
3. يشمل الحظر الانعكاسات، الصور، اللوحات، الرسوم، التماثيل، الشاشات، الظلال أو الصور الظلية التي تكشف تفاصيل وجه.
4. لا تكفي عبارات مخففة مثل: عدم إبراز الوجه، عدم استخدام لقطة قريبة، أو كون تفاصيل الوجه مجهولة.
5. الأصل هو منع الوجه بالتكوين الأصلي: من الخلف، أو خارج الإطار، أو بحجب طبيعي ثابت ومقنع. لا يجوز إنقاذ مادة مخالفة بعد التوليد بالطمس أو القص أو القناع أو الاستبدال أو إعادة الرسم.

## 1.2 الأنبياء وغير الأنبياء

```text
PROPHET_FACE_VISIBILITY = ABSOLUTELY_FORBIDDEN
PROPHET_PARTIAL_FACE_VISIBILITY = FORBIDDEN
PROPHET_FACE_OVERRIDE_ALLOWED = FALSE
NON_PROPHET_FACE_DEFAULT = FULLY_CONCEALED
PARTIAL_FACE_EXCEPTION_ENABLED = FALSE
```

حظر وجه الأنبياء مطلق ونهائي بلا استثناء. أما الاستثناء النظري المستقبلي لوجه غير نبي محجوب ماديًا فغير مفعّل، ولا يجوز لأي حلقة أو مخرج أو مزود تفعيله دون تعديل دستوري بشري جديد.

## 1.3 الذات الإلهية والغيب

1. لا تجسيد ولا تصوير لله سبحانه وتعالى بأي هيئة أو جسم أو وجه أو ظل أو مصدر بصري.
2. لا يُختلق شكل أو تشريح أو وجه أو لباس أو آلية مادية للملائكة أو الجن أو إبليس أو أي أمر غيبي لم يثبت وصفه بمصدر معتمد.
3. ثبوت الوجود لا يثبت الهيئة. عند جهل الكيفية يُعرض الأثر المشاهد أو رد الفعل المشروع، لا آلية مخترعة.
4. لا تُستخدم بوابات أو أشعة أو كتابات عائمة أو هالات أو مؤثرات خارقة بوصفها حقيقة غيبية بلا سند.

## 1.4 الستر والوقار

1. النساء: لباس معتم، فضفاض، كامل، غير محدد للجسد؛ لا شعر ولا رقبة ولا ذراعان ولا ساقان ولا جلد جذع ولا يدان ظاهرتان، ولا قماش شفاف أو هيئة جسم محددة.
2. لا تُحذف شخصية نسائية مطلوبة سرديًا لأن تنفيذ الستر صعب؛ يتوقف الإنتاج إن تعذر الامتثال.
3. الرجال: لباس محتشم ملائم للشخصية والحقبة، ومنع كشف الصدر أو الجسد بلا ضرورة معتمدة.

## 1.5 الحقيقة المادية وأصالة الحقبة

1. أصالة الحقبة إلزامية في الملابس والخامات والعمارة والأدوات والأثاث والنقل والزراعة والأسلحة والإضاءة والحرف والبيئة والسلوك والعادات الاجتماعية والحركة واستعمال الأشياء.
2. يمنع أي تفصيل حديث أو شاذ عن الحقبة.
3. لا يجوز اختراع ما لا يُعرف تاريخيًا. المعلوم يُستخدم، والمختلف فيه يُوسم، والمجهول يبقى مجهولًا ويُعالج بإخراج محايد.
4. كل حقبة تحتاج ملف أدلة يميز: `SOURCE_BACKED` و`PLAUSIBLE_BUT_UNCERTAIN` و`UNKNOWN` و`DISPUTED` و`ART_DIRECTION_ONLY` و`FORBIDDEN_ANACHRONISM`.

## 1.6 هوية الشخصيات واستمراريتها

1. كل شخصية مسماة تحتاج ملف أدلة شخصية معتمدًا.
2. كل شخصية متكررة أو تظهر في أكثر من لقطة تحتاج هوية بصرية قانونية وصورة ثابتة مرجعية واحدة معتمدة.
3. المرجع نفسه يجب أن يلتزم بحظر الوجه والستر والحقبة، ولا يجوز أن يصبح ناتج فاشل مرجعًا.
4. تُبنى الاستمرارية على البنية والنسب والطول النسبي والهيئة والملابس والخامات والألوان وغطاء الرأس والصورة الظلية، لا على ملامح الوجه.
5. أي تغير غير معتمد في الهوية أو الملابس أو العمر الظاهر أو الجنس أو البنية أو النسب يفشل المادة ويمنعها من المونتاج.

---

# القسم 2 — المصادر والبحث ودرجات اليقين

## 2.1 الحقيقة قبل السرد

1. سراج يبني القصة التي تسمح بها الأدلة، ولا يبحث عن أدلة لتبرير قصة تقررت مسبقًا.
2. كل ادعاء ديني أو تاريخي جوهري يرتبط بسجل مصدر ودرجة يقين ونطاق استعمال سردي وبصري.
3. لا يجوز لمصدر أدنى أن يتجاوز القرآن أو السنة الصحيحة أو دليلًا أعلى منه.
4. يجب الفصل بين الحقيقة المصدرية، والاستنتاج، والاختيار الإخراجي، والمجهول، والمختلف فيه.

## 2.2 الإسرائيليات

```text
ISRAILIYYAT_ALLOWED = TRUE
MAY_CONTRADICT_ISLAMIC_AQIDAH = FALSE
MAY_OVERRIDE_QURAN_OR_SAHIH_SUNNAH = FALSE
JAZM_LANGUAGE_ALLOWED = FALSE
UNCERTAINTY_DISCLOSURE_REQUIRED = TRUE
```

يجوز استخدامها إذا لم تخالف العقيدة ولا مصدرًا أعلى، مع صياغة غير جازمة تكشف طبيعتها ودرجة اليقين.

## 2.3 الأحاديث الضعيفة

```text
WEAK_HADITH_ALLOWED = CONDITIONALLY_TRUE
AQIDAH_FOUNDATION_ALLOWED = FALSE
CORE_RELIGIOUS_FACT_ALLOWED = FALSE
GRADE_DISCLOSURE_REQUIRED = TRUE
SCHOLARLY_USAGE_COMPATIBILITY_REQUIRED = TRUE
JAZM_LANGUAGE_ALLOWED = FALSE
```

لا يُبنى عليها أصل عقدي أو حقيقة دينية مركزية، ولا يخفى ضعفها، وتُرفض عند التعارض مع دليل أقوى.

## 2.4 الخلاف والتوثيق

1. الخلاف المعتبر المؤثر في فهم القصة لا يُخفى ولا يحسمه التفضيل السينمائي سرًا.
2. ما لا يغير المعنى الجوهري يمكن تجاوزه بصياغة مشتركة أو حذف التفصيل المختلف فيه.
3. يبقى التوثيق الخلفي كاملًا لكل ادعاء.
4. إفصاح المصدر ودرجة اليقين داخل الحلقة يكون بصوت الراوي طبيعيًا، لا بجرافيك أو بطاقات أو حواشٍ بصرية.
5. لغة الراوي ونبرته يجب أن تطابقا درجة يقين المصدر.

---

# القسم 3 — السرد والسيناريو وبنية الحلقة

1. الحقيقة والمعنى أعلى من الإثارة؛ يمنع الغموض الملفق، والوعود التي لا تُوفى، والحوار والوقائع والتفاصيل غير المسندة المقدمة كحقائق.
2. يجب أن يكون النص جذابًا، واضح البنية، خاليًا من الحشو والتكرار الدلالي والشرح الذي لا يضيف قيمة.
3. الـCold Open مسموح وغير إلزامي، ويختاره المخرج بحسب الحلقة. لا يتحول إلى قالب ثابت.
4. الخاتمة الهادفة مسموحة وغير إلزامية، وتُمنع الموعظة المصطنعة.

## 3.1 المدة

```text
NORMAL_EPISODE = 8_TO_15_MINUTES
PREFERRED_EPISODE = 10_TO_13_MINUTES
JUSTIFIED_SOFT_EXCEPTION = 6_TO_18_MINUTES
NORMAL_EPISODE_ABOVE_18_MINUTES = FORBIDDEN
LONG_SPECIAL_REQUIRES_SEPARATE_HUMAN_APPROVAL = TRUE
```

لا يجوز أن تؤدي المدة المستهدفة إلى حشو أو حذف مادة جوهرية.

## 3.2 البوابات البشرية قبل الإنفاق البصري

```text
HUMAN_SCRIPT_REVIEW_REQUIRED = TRUE
HUMAN_STORYBOARD_REVIEW_REQUIRED = TRUE
HUMAN_FINAL_PROVIDER_PROMPT_REVIEW_REQUIRED = TRUE
HUMAN_NARRATION_PERFORMANCE_REVIEW_REQUIRED = TRUE
```

المراجع يرى نص المزود النهائي نفسه لا ملخصًا، وأي تغيير جوهري بعد الموافقة يبطلها.

## 3.3 نص الأداء العربي

1. `CANONICAL_NARRATIVE_SCRIPT` يحفظ النص والمعنى المعتمدين.
2. `TTS_PERFORMANCE_SCRIPT` يحفظ المعنى والكلمات ويضيف التشكيل والتحكم في الوقف والوصل والأداء.
3. التشكيل السياقي إلزامي، مع قاموس نطق مركزي للأسماء والمصطلحات الدينية والتاريخية والكلمات الصعبة.
4. كل موضع توقف يحدد نوع الوقف وصيغة الوقف والاستئناف. لا تُنطق حركة الإعراب النهائية عند الوقف حيث تسقط عربيًا، ولا تُحذف الحركات المطلوبة أثناء الوصل.
5. الحذف الآلي الأعمى لحركات أواخر الكلمات ممنوع.

---

# القسم 4 — الإخراج البصري والـStoryboard

1. كل لقطة ترتبط بادعاء أو معنى أو فعل سردي محدد وبزمن من سلطة الصوت المعتمدة.
2. يجب أن يكون الفعل الرئيس مفهومًا بصريًا، ويحظر عكس الفعل أو إخفاؤه أو استبداله بصورة عامة لا تؤديه.
3. الجرافيك والنصوص المضافة والبطاقات والخرائط والرسوم المعلوماتية في Longform ممنوعة، باستثناء أصلَي المقدمة والنهاية المحددين في القسم 7. ويستثنى من ذلك في مشتقات Shorts فقط عقد captions السرد المحروقة المحدد في القسم 6.4، ولا يتحول هذا الاستثناء إلى bypass عام للنصوص أو الجرافيك.
4. النص الطبيعي داخل العالم مسموح فقط إذا كان صحيحًا حقبيًا وقابلًا للتحقق بدقة كاملة وله قيمة للمشهد.
5. يمنع الـgeneric filler والتكرار الدلالي الفارغ واللقطة التي تُضاف فقط لإكمال الزمن.
6. الحركة والكاميرا والإضاءة واللون والبيئة تخدم المعنى ولا تنشئ معنى دينيًا أو تاريخيًا غير مثبت.

## 4.1 مزيج الوسائط

```text
VIDEO_TIMELINE_SHARE_MIN = 0.50
VIDEO_TIMELINE_SHARE_MAX = 0.75
DENOMINATOR = CORE_EPISODE_DURATION
VIDEO_SHARE_WITHIN_RANGE = EPISODE_OPTIMIZED
```

الصور الثابتة مسموحة حين تكون أقوى من فيديو مصطنع. يمنع التحريك الرخيص أو حركة التكبير/السحب الآلية بغرض ملء الزمن.

## 4.2 إعادة الاستخدام والطيار

1. نسبة إعادة الاستخدام ديناميكية بلا سقف عالمي ثابت، لكن كل إعادة يجب أن تكون مبررة سرديًا وألا تشعر المشاهد بالتكرار أو الاقتصاد الواضح.
2. قبل الإنتاج المدفوع الأكبر، يُختبر طيار من أصعب اللقطات وأعلى فئات الخطر، لا من أسهلها.
3. يراجع ناتج الطيار الحقيقي وكل إطاراته بشريًا، وظهور فئة خطر جديدة قد يتطلب طيارًا جديدًا.

---

# القسم 5 — تجميع البرومبتات والمراجع والمزودات

1. البرومبت ناتج Compiler مقيد بعقد لقطة منظم، وليس نصًا حرًا يملك سلطة تخفيف الدستور.
2. يحقن Compiler القواعد الإلزامية، ويفشل عند التعارض أو نقص الحقول أو ظهور معنى يفتح الوجه أو يكسر الستر أو الحقبة أو الحقيقة.
3. يراجع Linter مستقل النص الإيجابي والسلبي والإعدادات والمراجع، ثم يراجع الإنسان الحمولة النهائية التي سترسل بالفعل.
4. الـExecutor لا يضيف عبارات إبداعية ولا يغير المزود أو النموذج أو البرومبت أو المرجع من عنده.
5. لا يملك Prompt Compiler صلاحية الاتصال بالمزود.

## 5.1 المزود الأساسي والبدائل

```text
PRIMARY_VISUAL_PROVIDER = VEO_3_1_LITE
AUTOMATIC_PROVIDER_SWITCHING = FALSE
SILENT_PROVIDER_OR_MODEL_FALLBACK = FORBIDDEN
ALTERNATE_PROVIDER = EXPERIMENTAL_UNTIL_PILOT_AND_HUMAN_APPROVAL
```

تبقى البنية قابلة لدعم مزودات متعددة تقنيًا، لكن ذلك لا يمنح أي بديل صلاحية إنتاجية.

## 5.2 المراجع والاستمرارية

1. الصورة الثابتة القانونية لكل شخصية متكررة مرجع ملزم في جميع ظهوراتها.
2. المرجع والملابس والهيئة والإصدار تُربط بهويات وبصمات، وتغييرها يبطل الموافقات التابعة.
3. لا يصبح ناتج فاشل أو غير مراجع مرجعًا.

## 5.3 الدفعات والإعادة

1. الدفعات تصاعدية بحسب المخاطر بعد نجاح الطيار واعتماده بشريًا.
2. الهدف هو صفر إعادة توليد يمكن تجنبها.
3. لا إعادة مدفوعة بلا سبب جذري، وإصلاح جوهري، وPreflight جديد، وموافقة بشرية مدفوعة جديدة.
4. إعادة الطلب نفسه بعد فشل جودة ممنوعة.

---

# القسم 6 — الراوي والصوت والنطق

## 6.1 سلطة الصوت

```text
PRIMARY_NARRATOR = CURRENT_APPROVED_NARRATOR
KEEP_VOICE_IDENTITY = TRUE
IMPROVE_PERFORMANCE_PIPELINE = TRUE
FINAL_APPROVED_NARRATION_AUDIO = TIMELINE_AUTHORITY
```

لا يُستبدل الراوي الحالي بلا اختبار ومقارنة وموافقة بشرية. أي تغير جوهري في هويته الصوتية يفشل.

## 6.2 سلامة الأداء

1. النص المؤدى يطابق النص المعتمد دلاليًا، ويستخدم تشكيلًا سياقيًا ووقفًا ووصلًا مضبوطين.
2. قاموس النطق وملف مشكلات الراوي الحالي إلزاميان وقابلان لإعادة الاستخدام عبر الحلقات.
3. يمنع الأداء المسرحي المبالغ، والإيقاع الآلي المتكرر، والوقوف غير الطبيعي، وإسقاط الحركات اللازمة.
4. القرآن يأتي من نص موثوق ولا يعاد بناؤه أو تعديله بواسطة LLM أو normalizer عام، وتلزم مراجعة بشرية للنص والنطق. إذا لم تضمن القراءة، لا يُجبر TTS عليها.
5. الاقتباس الحرفي للحديث يطابق المصدر، ولا يقدم الشرح أو إعادة الصياغة كأنه لفظ نبوي.

## 6.3 الموسيقى والمؤثرات

```text
MUSIC_ALLOWED = FALSE
MUSIC_EXCEPTION_ALLOWED = FALSE
SFX_ALLOWED = TRUE
SFX_CATEGORY_RESTRICTION = NONE
SFX_USE_MUST_SERVE_NARRATIVE = TRUE
INTENTIONAL_SILENCE_ALLOWED = TRUE
```

الموسيقى ممنوعة في المقدمة والسرد والانتقالات والنهاية بلا استثناء. جميع فئات المؤثرات مسموحة إذا خدمت النص، لكنها لا يجوز أن تختلق حدثًا أو تقدم صوتًا غيبيًا أو تاريخيًا غير مثبت بوصفه حقيقة.

## 6.4 المكساج والـCaptions

1. أولوية الإدراك: الراوي ثم البيئة والمؤثرات؛ يجب أن تبقى كل كلمة مفهومة، بلا clipping أو distortion أو pumping أو glitch.
2. الهدف العددي للـLoudness والـTrue Peak يثبت في Technical Delivery Profile قبل اعتماد الصوت النهائي.
3. في Longform: Closed Captions الخارجية الاختيارية مسموحة، أما النص المحروق والترجمة الظاهرة داخل الصورة فممنوعان بلا استثناء.
4. في مشتقات Shorts فقط: captions السرد المحروقة مسموحة ومفعلة افتراضيًا بشرط أن تكون مشتقة حرفيًا من Canonical Timed Transcript أو مصدر توقيت موثوق مربوط بالراوي، ومتزامنة مع النطق، وألا تحتوي أي نص مخترع أو Hook أو Title Card أو CTA أو Subscribe أو نثر زخرفي أو Fact Overlay أو نص غير متعلق أو Banner أو نص ترويجي. هذا استثناء نطاقي صريح لا ينطبق على Longform.
5. لا تُعد captions السردية وسيلة لإخفاء وجه أو جسد محظور أو عيب بصري، ولا ترفع أصلًا فشل في أي قاعدة أخرى إلى PASS.
6. الاستماع البشري الكامل لكل ثانية إلزامي؛ لا تكفي العينة ولا التقرير الآلي.

## 6.5 سلطة المدة

1. المدة الرسمية تُقاس من ملف Narration Master المعتمد بأداة وعقد دقة واحدين.
2. لا رقم مدة مكتوب يدويًا ولا تقريب مستقل يعد سلطة.
3. تغيير ملف الصوت أو دقته الزمنية يبطل موافقة التايملاين وما يتبعها.

---

# القسم 7 — المونتاج والتايملاين وأصول العلامة

1. لا يدخل أصل بصري المونتاج قبل نجاح التحقق الدستوري من ناتجه الحقيقي والمراجعة البشرية المطلوبة.
2. المونتاج لا يملك سلطة إنقاذ مخالفة أو تغيير المعنى أو تمديد الصوت لخدمة الفيديو.
3. الحركة الرقمية للصورة الثابتة مسموحة وليست إلزامية إذا زادت قيمة المشاهدة ولم تغير المعنى، ويمنع نمط Ken Burns الرخيص الآلي.
4. تصحيح اللون وتدريجه مسموحان للتناسق، لا لإخفاء فشل دستوري.

## 7.1 المقدمة والنهاية

```text
SIRAJ_BRAND_ASSET_DIRECTORY = C:\Users\abdul\OneDrive\Desktop\سراج\intro outro
INTRO_DISCOVERY = EXACTLY_ONE_VIDEO_FILE
OUTRO_DISCOVERY = EXACTLY_ONE_IMAGE_FILE
INTRO_AUTOMATIC_INSERTION = REQUIRED
INTRO_PLACEMENT = DIRECTOR_OPTIMIZED
OUTRO_AUTOMATIC_INSERTION = REQUIRED
OUTRO_PLACEMENT = AFTER_CORE_EPISODE_END
```

1. يثبت المسار والبصمة لكل أصل عند التنفيذ، ولا يختار النظام عند الغموض أو يبدل الأصل تلقائيًا.
2. المقدمة والنهاية استثناءان محددان فقط من حظر الجرافيك، ولا ينشئان استثناءً من حظر الوجوه أو الموسيقى أو أي قاعدة أعلى.
3. لا تعدل بنية الـOutro ولا تضاف إليه كتابة أو حركة أو عناصر جديدة.
4. لا تقطع المقدمة جملة أو فعلًا حرجًا ولا تضعف الـHook.
5. `CORE_EPISODE_DURATION` يستبعد المقدمة والنهاية، و`PUBLISHED_RUNTIME` يجمع الثلاثة.

## 7.2 CTA والمراجعة

1. CTA صوتي طبيعي مسموح وغير إلزامي، وصيغته غير ثابتة، ويحظر أن يكون قسريًا أو يفسد أثر الخاتمة.
2. يلزم مروران بشريان للمونتاج: مشاهدة كاملة متصلة للتجربة والإيقاع، ثم مراجعة تفصيلية تسمح بالإيقاف وفحص الاستمرارية والتزامن والجودة.

---

# القسم 8 — الاعتماد النهائي وبوابة النشر

```text
FINAL_HUMAN_CERTIFICATION_REQUIRED = TRUE
AUTONOMOUS_PUBLISH_APPROVAL = FORBIDDEN
MINIMUM_RELEASE_BAR = COMPETITIVE_PROFESSIONAL_YOUTUBE_PRODUCT
```

1. لا يتحول نجاح الأدوات الآلية إلى إذن بالنشر.
2. الحالات النهائية هي `PASS` أو `FAIL` أو `BLOCKED`، ولا يوجد Partial Pass يساوي جاهزية للنشر.
3. الجاهزية تتطلب نجاح الدستور والمصادر والسرد والصوت والصورة والمونتاج والجودة التقنية والاحترافية، ثم مشاهدة بشرية كاملة واعتمادًا بشريًا نهائيًا.
4. المنتج الصحيح تقنيًا لكنه متوسط أو ممل أو ذو مظهر AI واضح يفشل بوابة الجودة.

## 8.1 العنوان والـThumbnail

```text
THUMBNAIL_OWNER = HUMAN
THUMBNAIL_GENERATION_SELECTION_EDITING_BY_SIRAJ = FORBIDDEN
FINAL_PUBLIC_TITLE_OWNER = HUMAN
PUBLIC_YOUTUBE_TITLE_GENERATION_SELECTION_BY_SIRAJ = FORBIDDEN
INTERNAL_WORKING_TITLE_ALLOWED = TRUE
INTERNAL_WORKING_TITLE_MAY_NOT_AUTO_PUBLISH = TRUE
```

العنوان العام والـThumbnail خارج مسؤولية نظام الإنتاج ولا يدخلان في Episode Production Pass. لا يجوز مع ذلك نشر عنوان العمل الداخلي للعامة أو إجراء نشر ذاتي بلا الاعتماد البشري.

## 8.2 التعلم من الفشل

كل فشل قابل للتعميم يتحول إلى قاعدة عالمية أو اختبار رجوع أو بوابة، لا إلى Patch خاص بحلقة واحدة.

---

# القسم 9 — الإنفاق والتنفيذ المدفوع والاستعادة

## 9.1 حدود الصلاحية

```text
PAID_EXECUTION_DEFAULT = FORBIDDEN
PAID_START_REQUIRES_EXPLICIT_DESKTOP_CLICK = TRUE
TERMINAL_PAID_EXECUTION = FORBIDDEN
CLI_PAID_EXECUTION = FORBIDDEN
RECOVERY_SCRIPT_PAID_EXECUTION = FORBIDDEN
TEST_RUN_PAID_EXECUTION = FORBIDDEN
```

يمكن للنظام الوصول إلى `READY_FOR_PAID_EXECUTION` دون تنفيذ. فتح الواجهة أو نجاح الاختبارات أو اكتمال الخطة لا يعد إذنًا.

## 9.2 تفويض الدفعة

قبل النقرة البشرية يعرض النظام: الحلقة، المزود، النموذج، عدد الطلبات، مددها، التكلفة المتوقعة، سقف التكلفة، نوع الدفعة، حالة الطيار، وعدد الحمولات المعتمدة. كل تفويض يرتبط ببصمات الدستور والبرومبتات والمراجع والمزود والنموذج والأسعار ونطاق الدفعة.

أي تغير جوهري يجعل التفويض stale ويمنع التنفيذ حتى موافقة جديدة. لا يجوز تجاوز `AUTHORIZED_MAX_COST`.

## 9.3 المعاملات والحالات

1. لكل محاولة `ATTEMPT_ID` و`IDEMPOTENCY_KEY` حيث يدعم المزود ذلك.
2. نقرة بشرية واحدة تقابل معاملة تنفيذية واحدة؛ يمنع النقر المزدوج أو التحديث أو الأحداث المتكررة من إنشاء إنفاق مزدوج.
3. الحالات المميزة تشمل: لم يرسل، أرسل، يعمل، اكتمل، فشل لدى المزود، إرسال مجهول، فشل سياسة الناتج، فشل الجودة، ونجاح الناتج.
4. نجاح API لا يعني نجاحًا إنتاجيًا.

## 9.4 UNKNOWN والمصالحة

```text
UNKNOWN != FAILED
UNKNOWN != SAFE_TO_RETRY
AUTOMATIC_RESUBMIT_FROM_UNKNOWN = FORBIDDEN
```

عند الجهل هل استلم المزود الطلب، لا يعاد الإرسال. تبدأ مصالحة فقط لتحديد الطلب والتكلفة والمخرج والحالة، ولا تمنح المصالحة إذنًا بإرسال أو استئناف.

المحاولة التاريخية:

```text
ATTEMPT_ID = 1e6d0013-d37f-5df7-ab53-444c4f17c14c
PROVIDER_REQUEST = EP002-SH-001-V01
DISPOSITION = SUBMISSION_STATUS_UNKNOWN_AND_RETRY_BLOCKED
```

تبقى كذلك حتى دليل صريح.

## 9.5 الإعادة والاستعادة

1. الإعادة أو إعادة الإرسال المدفوعة تلقائيًا ممنوعتان.
2. الإعادة المدفوعة تحتاج سببًا جذريًا، وإصلاحًا جوهريًا، وPreflight جديدًا، وتفويضًا بشريًا جديدًا.
3. Recovery نطاقه قبل الإنفاق: إصلاح حالة محلية، إعادة بناء، حساب بصمات، واكتشاف أو مصالحة معرفات. لا يرسل طلبًا جديدًا.
4. اكتمال طلبات المزود لا يسمح بالمونتاج قبل فحص الناتج واعتماده.

## 9.6 السجل المالي والفرملة

1. يسجل دفتر Append-Only كل محاولة ومعرفاتها وبصماتها ومدتها وتكلفتها وحالتها ومخرجها.
2. تُحفظ التكلفة المقدرة والفعلية والانحراف، وتتوقف بقية الدفعة عند شذوذ مادي.
3. تغير أسعار المزود يبطل تقدير التكلفة والتفويض المرتبط به.
4. توفر الواجهة Kill Switch يمنع أي إرسال مستقبلي، دون ادعاء إلغاء طلب استلمه المزود إن لم يدعم الإلغاء.

---

# القسم 10 — حوكمة الدستور ومنع الانحراف

## 10.1 مصدر واحد وحزمة واحدة

1. يوجد دستور موحد واحد أعلى من جميع الطبقات.
2. النموذج المنظم هو مصدر القواعد القابل للتنفيذ، والوثيقة البشرية عرض مُراجع ومربوط بالنموذج داخل حزمة إصدار واحدة.
3. تشترك الملفات في `CONSTITUTION_ID` و`VERSION` و`BUNDLE_ID`، وتحمل كل مادة بصمتها المستقلة؛ لا تستخدم بصمة واحدة زائفة لملفين مختلفين. يربطهما `BUNDLE_MANIFEST_SHA256`.
4. يمنع تكرار سلطة القاعدة يدويًا في عدة ملفات. الكود يقرأ الحزمة المجمعة ولا يملك قيمًا أخف مخفية.

## 10.2 سلسلة الإنفاذ

كل قاعدة صلبة يجب أن تملك، حيث ينطبق:

```text
RULE
→ COMPILER OBLIGATION
→ INDEPENDENT VALIDATOR
→ POSITIVE AND NEGATIVE TESTS
→ RUNTIME GATE
→ AUDIT EVIDENCE
```

إذا لم ينطبق عنصر، يسجل سبب عدم انطباقه صراحة. لا تعد القاعدة منفذة لمجرد وجودها في النص أو الاختبار.

## 10.3 الفشل المغلق

1. غياب الدستور أو فشل تحميله أو اختلاف إصداره أو بصمته أو عدم معرفة قيمة حساسة يمنع المرحلة.
2. كل Artifact يحمل معرف الدستور وإصداره وبصمته وبصمات مدخلاته وسجل القرار.
3. لا Silent Defaults لقواعد الوجه أو الستر أو الغيب أو المصادر أو الموسيقى أو الجرافيك أو الإنفاق أو الموافقات.
4. لا يملك Compiler أو Validator أو Executor أو Adapter سلطة تغيير السياسة.

## 10.4 فصل الصلاحيات

1. Compiler لا يتصل بالمزود.
2. Validator لا يعدل ما يفحصه.
3. Executor ينفذ Payload معتمدًا فقط ولا يضيف إبداعًا.
4. Recovery لا ينفق.
5. الاختبارات تستخدم Fixtures/Fakes Offline ولا تصل إلى مزود إنتاجي.
6. النقرة البشرية الصريحة هي الحد الوحيد لبدء معاملة مدفوعة بعد إغلاق جميع البوابات السابقة.

## 10.5 التغيير والإبطال

1. كل موافقة ترتبط ببصمات المدخلات التي راجعتها؛ التغيير الجوهري يبطلها آليًا ولا يرحلها إلى النسخة الجديدة.
2. تغييرات الدستور تخضع لمراجعة بشرية وتغيير إصدار وسجل أسباب واختبارات رجوع قبل التنفيذ.
3. لا يجوز لقرار حلقة أن يضعف قاعدة Series-Wide.
4. سجلات المحاولات والمصالحة والإبطال Append-Only، ولا تمسح الأدلة التاريخية.

## 10.6 معيار اكتمال الإنفاذ

```text
CRITICAL_UNRESOLVED = 0
HIGH_UNRESOLVED = 0
POLICY_CONTRADICTIONS = 0
UNENFORCED_HARD_RULES = 0
SILENT_DEFAULTS_FOR_SENSITIVE_RULES = 0
PROVIDER_OR_PAID_CALLS_DURING_CONSOLIDATION = 0
```

لا تعني اكتمال هذه الوثيقة أن الكود الحالي يحقق المعيار؛ تُثبت الجاهزية فقط بعد تنفيذ مصفوفة الإنفاذ واختبارها واعتمادها.

---

# أحكام المرحلة الحالية

```text
CONSOLIDATION_AND_ENFORCEMENT_DESIGN = ALLOWED
PRODUCTION_CODE_REMEDIATION = NOT_AUTHORIZED_IN_THIS_PHASE
PROVIDER_CALLS = FORBIDDEN
PAID_CALLS = FORBIDDEN
NETWORK_PRODUCTION_CALLS = FORBIDDEN
RETRY_OR_RESUBMISSION = FORBIDDEN
MONTAGE = FORBIDDEN
PRODUCTION_EXECUTION = FORBIDDEN
```

أي حالة سابقة أو Artifact سابق يتعارض مع هذا الدستور يفقد أهلية الاعتماد والاستخدام، لكنه يُحفظ كدليل ولا يُحذف أو يُعاد توصيفه بلا سند.
